[package]
name = "testing_yew_router_and_forms"
version = "0.1.0"
edition = "2021"
description = "This uses a function component to test yew router and forms"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-console = "0.2.3"
reqwasm = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4"
web-sys = "0.3.60"
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

